--- a/configs/fields/layers.yml
+++ b/configs/fields/layers.yml
@@ -31,7 +31,7 @@ extent:
   csv: text
   airtable: text
 writing_id:
-  name: Writing IDs
+  name: Writing objects
   csv: record+
   airtable: record+
   delimiter: [","]
@@ -77,7 +77,7 @@ ink_note:
   airtable: text+
   delimiter: ["|~|", "#"]
 layout_locus:
-  name: Layout Locus
+  name: Layout locus
   csv: text+
   airtable: text+
   delimiter: ["|~|"]
@@ -128,7 +128,7 @@ text_unit_sequence_override:
   airtable: text+
   delimiter: [","]
 paracontent:
-  name: Paracontents
+  name: Portal Paracontents
   csv: record+
   airtable: record+
   delimiter: [","]
