--- a/configs/fields/work_witnesses.yml
+++ b/configs/fields/work_witnesses.yml
@@ -44,7 +44,7 @@ excerpt_id:
   delimiter: [","]
   lookup: excerpts.*
 content_id:
-  name: Contents
+  name: ToC
   csv: record+
   airtable: record+
   delimiter: [","]
