--- a/configs/fields/text_units.yml
+++ b/configs/fields/text_units.yml
@@ -114,16 +114,16 @@ change_log_message:
   delimiter: ["|~|"]
 change_log_contributor:
   name: Contributor
-  csv: text
-  airtable: text
-  delimiter: ["|~|"]
+  csv: text+
+  airtable: text+
+  delimiter: ["|~|", ","]
 change_log_added_by:
   name: Added by
-  csv: text
-  airtable: text
+  csv: text+
+  airtable: text+
   delimiter: ["|~|"]
 change_log_timestamp:
   name: Timestamp
-  csv: text
-  airtable: text
+  csv: text+
+  airtable: text+
   delimiter: ["|~|"]
