Implement associated entities table
A bit hacky, to be honest, especially for paracontents...but it works

--- a/configs/fields/layers.yml
+++ b/configs/fields/layers.yml
@@ -133,6 +133,12 @@ paracontent:
   airtable: record+
   delimiter: [","]
   lookup: paracontents.*
+assoc_entities:
+  name: Associated Entities
+  csv: record+
+  airtable: record+
+  delimiter: [","]
+  lookup: assoc_entities.*
 assoc_name_ark:
   name: Associated Name ARKs
   csv: text+
