--- a/configs/fields/ms_objs.yml
+++ b/configs/fields/ms_objs.yml
@@ -236,6 +236,12 @@ typed_notes:
     csv: text+
     airtable: text+
     delimiter: ["|~|"]
+assoc_entities:
+  name: Associated Entities
+  csv: record+
+  airtable: record+
+  delimiter: [","]
+  lookup: assoc_entities.*
 assoc_name_ark:
   name: Associated Name ARKs
   csv: text+
