--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.9"
 dependencies = [
     "pyairtable (>=3.3.0,<4.0.0)",
     "pandas (>=2.3.3,<3.0.0)",
-    "pyyaml (>=6.0.3,<7.0.0)"
+    "pyyaml (>=6.0.3,<7.0.0)",
+    "dryable (>=1.2.0,<2.0.0)"
 ]
 
 [tool.poetry]
