--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ authors = [
     {name = "William L Potter",email = "44096602+wlpotter@users.noreply.github.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.9,<4.0"
 dependencies = [
     "pyairtable (>=3.3.0,<4.0.0)",
     "pandas (>=2.3.3,<3.0.0)",
     "pyyaml (>=6.0.3,<7.0.0)",
-    "dryable (>=1.2.0,<2.0.0)"
+    "dryable (>=1.2.0,<2.0.0)",
+    "jschon (>=0.11.1,<0.12.0)"
 ]
 
 [tool.poetry]
